--- a/web/pages/contacto.html
+++ b/web/pages/contacto.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Contacto | Barretodo</title>
+<title>Contacto | BARRETODO</title>
 <meta name="description" content="Solicitá presupuesto por WhatsApp o formulario. Respondemos hoy.">
 <link rel="icon" type="image/png" href="../favicon.png" />
 <link rel="canonical" href="https:/barretodo.com.ar/pages/contacto.html">
@@ -46,7 +46,7 @@
   <div class="container">
     <a href="../index.html" class="brand">
       <img src="../assets/img/logo.png" alt="Barretodo logo" class="logo">
-      <span class="brand-name">Barretodo</span>
+      <span class="brand-name">BARRETODO</span>
     </a>
     <nav class="site-nav" aria-label="Principal">
       <button class="menu-toggle" aria-label="Abrir menú" id="menuToggle">☰</button>
@@ -88,38 +88,71 @@
 
 </main>
 <footer class="site-footer">
-  <div class="container footer-grid">
-    <div class="footer-brand">
-      <img src="../assets/img/logo.png" alt="Logo Barretodo" class="logo-sm">
-      <p>Distribuidora mayorista y minorista de productos de limpieza en CABA. Te ayudamos a elegir lo más rendidor.</p>
+  <div class="container">
+
+    <div class="footer-main">
+      <!-- Col 1: Marca + descripción -->
+<div class="footer-brand">
+  <img src="assets/img/logo.png" alt="Barretodo">
+  <p>
+    Distribuidora mayorista y minorista de productos de limpieza en CABA.
+    Te ayudamos a elegir lo más rendidor.
+  </p>
+</div>
+
+
+      <span class="f-divider" aria-hidden="true"></span>
+
+      <!-- Col 2: Datos de contacto -->
+      <div class="f-col f-contact">
+        <h3 class="f-title">Contacto</h3>
+        <ul class="f-list">
+          <li>📍 Av. Hipólito Yrigoyen 3386, Almagro, CABA</li>
+          <li>📞 +54 11 5102-2954</li>
+          <li>✉️ contacto@barretodo.com.ar</li>
+        </ul>
+      </div>
+
+      <span class="f-divider" aria-hidden="true"></span>
+
+      <!-- Col 3: Redes + Newsletter en un solo bloque -->
+      <div class="f-col f-social-news">
+        <h3 class="f-title">Seguinos</h3>
+        <div class="f-social-row">
+          <!-- Instagram -->
+          <a class="f-icon" href="https://instagram.com/" target="_blank" aria-label="Instagram">
+            <svg viewBox="0 0 24 24" width="20" height="20" fill="none" stroke="#1F2D2C" stroke-width="1.8"><rect x="2.5" y="2.5" width="19" height="19" rx="5" ry="5"/><circle cx="12" cy="12" r="4.2"/><circle cx="18" cy="6" r="1.3" fill="#1F2D2C" stroke="none"/></svg>
+          </a>
+          <!-- WhatsApp -->
+          <a class="f-icon" href="https://wa.me/541151022954" target="_blank" aria-label="WhatsApp">
+            <svg viewBox="0 0 24 24" width="20" height="20" fill="none" stroke="#1F2D2C" stroke-width="1.8"><path d="M20.5 11.8A8.5 8.5 0 0 1 8.3 19.6L4 21l1.3-4.1A8.5 8.5 0 1 1 20.5 11.8z"/><path d="M16.4 14.6c-.2.6-1.2 1-1.7.9-1.4-.3-3.2-1.2-4.3-2.6-1.2-1.4-1.7-2.9-1.9-3.8-.1-.6.3-1.5.9-1.7.3-.1.6 0 .8.3l.9 1.2c.2.3.2.7 0 1-.2.2-.2.4 0 .7.3.6.9 1.4 1.6 2 .6.6 1.3 1.1 1.9 1.4.3.1.5.1.7 0 .3-.2.7-.2 1 .1l1 .8c.3.3.4.6.1.9z" fill="#1F2D2C" stroke="none"/></svg>
+          </a>
+          <!-- Facebook -->
+          <a class="f-icon" href="https://facebook.com/" target="_blank" aria-label="Facebook">
+            <svg viewBox="0 0 24 24" width="20" height="20" fill="none" stroke="#1F2D2C" stroke-width="1.8"><path d="M14.5 8.5h2.5V6h-2.5c-2 0-3.5 1.5-3.5 3.5V12H8v2.5h3v6h2.5v-6H17V12h-3v-2c0-.6.4-1.5 1.5-1.5z"/></svg>
+          </a>
+        </div>
+
+        <h3 class="f-title f-title-space">Suscribite</h3>
+        <form class="f-news-form" action="#" method="post">
+          <input type="email" class="f-input" placeholder="Tu email">
+          <button class="f-submit" type="submit">Suscribirme</button>
+        </form>
+      </div>
     </div>
-    <div>
-      <h4>Datos</h4>
-      <ul class="list-plain">
-        <li>Av. Hipólito Yrigoyen 3386, Almagro, CABA</li>
-        <li><a href="https://wa.me/541151022954" target="_blank" rel="noopener">+54 11 5102-2954</a></li>
-        <li><a href="mailto:contacto@barretodo.com.ar">contacto@barretodo.com.ar</a></li>
-      </ul>
-    </div>
-    <div>
-      <h4>Accesos</h4>
-      <ul class="list-plain">
-        <li><a href="../pages/productos.html">Productos</a></li>
-        <li><a href="../catalogo/index.html">Catálogo</a></li>
-        <li><a href="../pages/contacto.html">Contacto</a></li>
-      </ul>
-    </div>
-    <div>
-      <h4>Redes</h4>
-      <p>
-        <a href="https://instagram.com/barre.todo" target="_blank" rel="noopener" aria-label="Instagram">Instagram</a> ·
-        <a href="https://wa.me/541151022954" target="_blank" rel="noopener" aria-label="WhatsApp">WhatsApp</a> ·
-        <span aria-label="Facebook">Facebook</span>
-      </p>
+
+    <!-- Barra inferior -->
+    <div class="footer-bottom">
+      <nav class="f-links">
+        <a href="/productos.html">Productos</a>
+        <a href="/catalogo.html">Catálogo</a>
+        <a href="/contacto.html">Contacto</a>
+      </nav>
+      <div class="f-copy">© 2025 Barretodo. Todos los derechos reservados.</div>
     </div>
   </div>
-  <div class="copyright">© <span id="year"></span> Barretodo. Todos los derechos reservados.</div>
 </footer>
+
 
 <a class="whatsapp-fab" href="https://wa.me/541151022954?text=Hola%20Barretodo%2C%20quiero%20un%20presupuesto" target="_blank" rel="noopener" aria-label="Comunicate con nosotros">
   <img src="../assets/img/whatsapp.png" alt="WhatsApp">
