--- a/web/pages/productos.html
+++ b/web/pages/productos.html
@@ -46,7 +46,7 @@
   <div class="container">
     <a href="../index.html" class="brand">
       <img src="../assets/img/logo.png" alt="Barretodo logo" class="logo">
-      <span class="brand-name">Barretodo</span>
+      <span class="brand-name">BARRETODO</span>
     </a>
     <nav class="site-nav" aria-label="Principal">
       <button class="menu-toggle" aria-label="Abrir menú" id="menuToggle">☰</button>
