--- a/web/index.html
+++ b/web/index.html
@@ -78,27 +78,39 @@
     
   </section>
 
-<section class="benefits-section">
-	<h2 class="section-title">CONTAMOS CON MÁS DE 250 PRODUCTOS DE LIMPIEZA E HIGIENE</h2>
-  <div class="container benefits">
-    <div class="benefit">
-      <span class="icon-badge">🚚</span>
-      <span class="label">Envíos 24–48 h</span>
-    </div>
-    <div class="benefit">
-      <span class="icon-badge">💲</span>
-      <span class="label">Precios mayoristas reales</span>
-    </div>
-    <div class="benefit">
-      <span class="icon-badge">🏢</span>
-      <span class="label">Empresas & consorcios</span>
-    </div>
-    <div class="benefit">
-      <span class="icon-badge">💬</span>
-      <span class="label">Atención por WhatsApp</span>
-    </div>
+<section class="why-us">
+  <div class="container">
+    <h2>¿Por qué elegir Barretodo como distribuidora de limpieza en CABA?</h2>
+    <p>
+      Ofrecemos soluciones rápidas y accesibles en productos de limpieza e higiene. 
+      Abastecemos <strong>empresas, instituciones y consorcios</strong> con entregas 
+      en 24–48 h y precios mayoristas reales.
+    </p>
+    <ul class="features-list">
+      <li>
+        <img src="assets/icons/envio.png" alt="Envíos rápidos 24–48 h">
+        <h3>Envíos 24–48 h</h3>
+        <p>Entrega inmediata en CABA y alrededores.</p>
+      </li>
+      <li>
+        <img src="assets/icons/precios.png" alt="Precios mayoristas reales">
+        <h3>Precios mayoristas reales</h3>
+        <p>Los mejores costos en insumos de limpieza e higiene.</p>
+      </li>
+      <li>
+        <img src="assets/icons/empresas.png" alt="Empresas y consorcios">
+        <h3>Empresas & Consorcios</h3>
+        <p>Asesoría y suministro mensual garantizado.</p>
+      </li>
+      <li>
+        <img src="assets/icons/whatsapp.png" alt="Atención por WhatsApp">
+        <h3>Atención por WhatsApp</h3>
+        <p>Comunicación inmediata y personalizada.</p>
+      </li>
+    </ul>
   </div>
 </section>
+
 
 <hr class="section-hr">
 
