--- a/web/index.html
+++ b/web/index.html
@@ -88,22 +88,22 @@
     </p>
     <ul class="features-list">
       <li>
-        <img src="assets/icons/envio.png" alt="Envíos rápidos 24–48 h">
+        <img src="assets/img/envio.png" alt="Envíos rápidos 24–48 h">
         <h3>Envíos 24–48 h</h3>
         <p>Entrega inmediata en CABA y alrededores.</p>
       </li>
       <li>
-        <img src="assets/icons/precios.png" alt="Precios mayoristas reales">
+        <img src="assets/img/precios.png" alt="Precios mayoristas reales">
         <h3>Precios mayoristas reales</h3>
         <p>Los mejores costos en insumos de limpieza e higiene.</p>
       </li>
       <li>
-        <img src="assets/icons/empresas.png" alt="Empresas y consorcios">
+        <img src="assets/img/empresas.png" alt="Empresas y consorcios">
         <h3>Empresas & Consorcios</h3>
         <p>Asesoría y suministro mensual garantizado.</p>
       </li>
       <li>
-        <img src="assets/icons/whatsapp.png" alt="Atención por WhatsApp">
+        <img src="assets/img/whatsapp.png" alt="Atención por WhatsApp">
         <h3>Atención por WhatsApp</h3>
         <p>Comunicación inmediata y personalizada.</p>
       </li>
