--- a/web/index.html
+++ b/web/index.html
@@ -103,7 +103,7 @@
         <p>Asesoría y suministro mensual garantizado.</p>
       </li>
       <li>
-        <img src="assets/img/whatsapp.png" alt="Atención por WhatsApp">
+        <img src="assets/img/whatsappp.png" alt="Atención por WhatsApp">
         <h3>Atención por WhatsApp</h3>
         <p>Comunicación inmediata y personalizada.</p>
       </li>
