--- a/web/pages/productos.html
+++ b/web/pages/productos.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="es-AR">
 <head>
+<base href="/" />
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Productos | BARRETODO</title>
