--- a/web/pages/productos.html
+++ b/web/pages/productos.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="es-AR">
 <head>
-<base href="/" />
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Productos | BARRETODO</title>
@@ -171,7 +170,7 @@
     <div class="footer-main">
       <!-- Col 1: Marca + descripción -->
 <div class="footer-brand">
-  <img src="assets/img/logo.png" alt="Barretodo">
+  <img src="../assets/img/logo.png" alt="Barretodo">
   <p>
     Distribuidora mayorista y minorista de productos de limpieza en CABA.
     Te ayudamos a elegir lo más rendidor.
