--- a/web/pages/quienes-somos.html
+++ b/web/pages/quienes-somos.html
@@ -80,7 +80,7 @@
     <div class="footer-main">
       <!-- Col 1: Marca + descripción -->
 <div class="footer-brand">
-  <img src="assets/img/logo.png" alt="Barretodo">
+  <img src="../assets/img/logo.png" alt="Barretodo">
   <p>
     Distribuidora mayorista y minorista de productos de limpieza en CABA.
     Te ayudamos a elegir lo más rendidor.
