--- a/web/pages/distribuidora-caba.html
+++ b/web/pages/distribuidora-caba.html
@@ -63,19 +63,70 @@
 </header>
 <main class="page">
 
-<section class="container">
-  <h2>Distribuidora en CABA</h2>
-  <p>Abastecemos empresas, consorcios y hogares en CABA con entregas en 24–48 hs según zona. Trabajamos con productos rendidores y marcas líderes, con atención personalizada para ayudarte a elegir mejor.</p>
-  <div class="grid simple-cards">
-    <article class="card"><h3>Asesoramiento</h3><p>Te guiamos para armar tu pedido según tu necesidad y presupuesto.</p></article>
-    <article class="card"><h3>Entregas rápidas</h3><p>Logística propia y operadores de confianza. Ruta optimizada por barrios.</p></article>
-    <article class="card"><h3>Precios mayoristas</h3><p>Beneficios por volumen y cuentas mensuales para empresas.</p></article>
+<section class="container" style="margin-top:20px">
+  <!-- H1 para SEO -->
+  <h1>Distribuidora de productos de limpieza en CABA</h1>
+
+  <p class="subtitle" style="margin:0 auto 22px;max-width:920px">
+    Abastecemos <strong>empresas, consorcios e instituciones</strong> en la Ciudad de Buenos Aires con
+    <strong>entregas en 24–48 h</strong>, atención por WhatsApp y precios mayoristas reales.
+  </p>
+
+  <!-- 3 motivos (usa tu grid + cards) -->
+  <div class="grid simple-cards" style="margin-top:10px">
+    <article class="card" style="padding:20px">
+      <div class="badge-ico">🚚</div>
+      <h3 style="margin-top:6px">Entregas rápidas</h3>
+      <p>Logística propia y operadores de confianza. Ruta optimizada por barrios.</p>
+    </article>
+
+    <article class="card" style="padding:20px">
+      <div class="badge-ico">🤝</div>
+      <h3 style="margin-top:6px">Asesoramiento real</h3>
+      <p>Armamos tu pedido según necesidad y presupuesto, sin vueltas.</p>
+    </article>
+
+    <article class="card" style="padding:20px">
+      <div class="badge-ico">💲</div>
+      <h3 style="margin-top:6px">Precios mayoristas</h3>
+      <p>Beneficios por volumen y cuentas mensuales para empresas.</p>
+    </article>
   </div>
+
+  <!-- Qué distribuimos (enlaces internos) -->
+  <div class="grid" style="margin-top:26px">
+    <article class="card" style="padding:16px">
+      <h3>Qué distribuimos</h3>
+      <p class="muted" style="margin:6px 0 14px">Línea completa para limpieza e higiene:</p>
+      <ul class="list-plain" style="text-align:left;margin:0 auto;max-width:420px">
+        <li>• <a href="../pages/productos.html#concentrados">Concentrados</a>, <a href="../pages/productos.html#descartables">descartables</a> y <a href="../pages/productos.html#dispenser">dispensers</a></li>
+        <li>• <a href="../pages/productos.html#herramientas">Herramientas</a> y <a href="../pages/productos.html#aromatizacion">aromatización</a></li>
+        <li>• <a href="../pages/productos.html#insecticidas">Insecticidas</a></li>
+      </ul>
+    </article>
+
+    <article class="card" style="padding:16px">
+      <h3>Cobertura</h3>
+      <p>Capital Federal (CABA). Entregas <strong>24–48 h</strong> según zona y volumen.</p>
+    </article>
+
+    <article class="card" style="padding:16px">
+      <h3>Cómo comprar</h3>
+      <ol class="steps" style="text-align:left;max-width:420px;margin:10px auto 0">
+        <li>Pedinos lista o armá tu pedido.</li>
+        <li>Coordinamos entrega y forma de pago.</li>
+        <li>Recibís en 24–48 h.</li>
+      </ol>
+    </article>
+  </div>
+
+  <!-- CTA -->
   <div class="cta-row mt-32">
     <a class="btn btn-primary" href="../catalogo/index.html">Ver catálogo</a>
     <a class="btn btn-secondary" href="../pages/contacto.html">Contacto</a>
   </div>
 </section>
+
 
 </main>
 <footer class="site-footer">
