--- a/web/pages/distribuidora-caba.html
+++ b/web/pages/distribuidora-caba.html
@@ -61,7 +61,7 @@
     </nav>
   </div>
 </header>
-<main class="page">
+<main class="page pg-distribuidora">
 
 <section class="container" style="margin-top:20px">
   <!-- H1 para SEO -->
