--- a/web/pages/distribuidora-caba.html
+++ b/web/pages/distribuidora-caba.html
@@ -74,19 +74,19 @@
 
   <!-- 3 motivos (usa tu grid + cards) -->
   <div class="grid simple-cards" style="margin-top:10px">
-    <article class="card" style="padding:20px">
+    <article class="card">
       <div class="badge-ico">🚚</div>
       <h3 style="margin-top:6px">Entregas rápidas</h3>
       <p>Logística propia y operadores de confianza. Ruta optimizada por barrios.</p>
     </article>
 
-    <article class="card" style="padding:20px">
+    <article class="card">
       <div class="badge-ico">🤝</div>
       <h3 style="margin-top:6px">Asesoramiento real</h3>
       <p>Armamos tu pedido según necesidad y presupuesto, sin vueltas.</p>
     </article>
 
-    <article class="card" style="padding:20px">
+    <article class="card">
       <div class="badge-ico">💲</div>
       <h3 style="margin-top:6px">Precios mayoristas</h3>
       <p>Beneficios por volumen y cuentas mensuales para empresas.</p>
@@ -95,7 +95,7 @@
 
   <!-- Qué distribuimos (enlaces internos) -->
   <div class="grid" style="margin-top:26px">
-    <article class="card" style="padding:16px">
+    <article class="card">
       <h3>Qué distribuimos</h3>
       <p class="muted" style="margin:6px 0 14px">Línea completa para limpieza e higiene:</p>
       <ul class="list-plain" style="text-align:left;margin:0 auto;max-width:420px">
@@ -105,12 +105,12 @@
       </ul>
     </article>
 
-    <article class="card" style="padding:16px">
+    <article class="card">
       <h3>Cobertura</h3>
       <p>Capital Federal (CABA). Entregas <strong>24–48 h</strong> según zona y volumen.</p>
     </article>
 
-    <article class="card" style="padding:16px">
+    <article class="card">
       <h3>Cómo comprar</h3>
       <ol class="steps" style="text-align:left;max-width:420px;margin:10px auto 0">
         <li>Pedinos lista o armá tu pedido.</li>
