--- a/web/pages/faq.html
+++ b/web/pages/faq.html
@@ -62,24 +62,49 @@
   </div>
 </header>
 <main class="page">
+  <section class="container">
+    <h2>Preguntas frecuentes</h2>
 
-<section class="container">
-  <h2>Preguntas frecuentes</h2>
-  <div class="grid simple-cards">
-    <article class="card"><h3>¿Qué zonas cubren?</h3><p>CABA y GBA Norte en entregas programadas.</p></article>
-    <article class="card"><h3>¿Cuáles son los medios de pago?</h3><p>Efectivo, transferencia y tarjetas. Consultá promos.</p></article>
-    <article class="card"><h3>¿Tiempos de entrega?</h3><p>24–48 hs según zona y disponibilidad.</p></article>
-    <article class="card"><h3>¿Venden por mayor?</h3><p>Sí, precios mayoristas reales con descuentos por volumen.</p></article>
-    <article class="card"><h3>¿Puedo retirar?</h3><p>Coordinamos retiro en Almagro.</p></article>
-    <article class="card"><h3>¿Asesoramiento?</h3><p>Te ayudamos por WhatsApp a elegir lo más rendidor.</p></article>
-  </div>
-  <div class="cta-row mt-32">
-    <a class="btn btn-primary" href="../catalogo/index.html">Ver catálogo</a>
-    <a class="btn btn-secondary" href="../pages/contacto.html">Contacto</a>
-  </div>
-</section>
+    <!-- Usa la misma grilla y tarjetas del resto del sitio -->
+    <div class="grid simple-cards">
+      <article class="card">
+        <h3>¿Qué zonas cubren?</h3>
+        <p>CABA y GBA Norte en entregas programadas.</p>
+      </article>
 
+      <article class="card">
+        <h3>¿Cuáles son los medios de pago?</h3>
+        <p>Efectivo, transferencia y tarjetas. Consultá promos.</p>
+      </article>
+
+      <article class="card">
+        <h3>¿Tiempos de entrega?</h3>
+        <p>24–48 hs según zona y disponibilidad.</p>
+      </article>
+
+      <article class="card">
+        <h3>¿Venden por mayor?</h3>
+        <p>Sí, precios mayoristas reales con descuentos por volumen.</p>
+      </article>
+
+      <article class="card">
+        <h3>¿Puedo retirar?</h3>
+        <p>Coordinamos retiro en Almagro.</p>
+      </article>
+
+      <article class="card">
+        <h3>¿Asesoramiento?</h3>
+        <p>Te ayudamos por WhatsApp a elegir lo más rendidor.</p>
+      </article>
+    </div>
+
+    <div class="cta-row mt-32">
+      <a class="btn btn-primary" href="../catalogo/index.html">Ver catálogo</a>
+      <a class="btn btn-secondary" href="../pages/contacto.html">Contacto</a>
+    </div>
+  </section>
 </main>
+
 <footer class="site-footer">
   <div class="container">
 
