--- a/web/pages/faq.html
+++ b/web/pages/faq.html
@@ -62,7 +62,7 @@
   </div>
 </header>
 <main class="page">
-  <section class="container">
+  <section class="container page-faq"
     <h2>Preguntas frecuentes</h2>
 
     <!-- Usa la misma grilla y tarjetas del resto del sitio -->
