--- a/web/pages/faq.html
+++ b/web/pages/faq.html
@@ -62,9 +62,9 @@
   </div>
 </header>
 <main class="page">
-  <section class="container page-faq"
-    <h2>Preguntas frecuentes</h2>
-
+ <section class="container faq">
+  <h2 class="section-title">Preguntas frecuentes</h2>
+    
     <!-- Usa la misma grilla y tarjetas del resto del sitio -->
     <div class="grid simple-cards">
       <article class="card">
