--- a/web/pages/quienes-somos.html
+++ b/web/pages/quienes-somos.html
@@ -61,19 +61,113 @@
     </nav>
   </div>
 </header>
-<main class="page">
 
-<section class="container">
-  <h2>Quiénes somos</h2>
-  <p>Somos Barretodo, una distribuidora de productos de limpieza con base en Almagro, CABA. Nuestro enfoque es simple: calidad, servicio y rapidez. Priorizamos productos rendidores, asesoramiento honesto y entregas en tiempo.</p>
-  <p>Abastecemos a empresas, consorcios y hogares con soluciones a medida. Hablá con nosotros: respondemos hoy.</p>
-  <div class="cta-row mt-32">
-    <a class="btn btn-primary" href="../catalogo/index.html">Ver catálogo</a>
-    <a class="btn btn-secondary" href="../pages/contacto.html">Contacto</a>
-  </div>
-</section>
+<main class="page page-about">
+
+  <!-- Intro -->
+  <section class="about-intro container">
+    <h1 class="section-title">Quiénes somos</h1>
+    <p class="lead">
+      Somos <strong>Barretodo</strong>, distribuidora de productos de limpieza con base en <strong>Almagro, CABA</strong>.
+      Simplificamos la compra y gestión de insumos para <strong>empresas, consorcios y hogares</strong> con
+      <strong>productos rendidores</strong>, <strong>asesoramiento honesto</strong> y <strong>entregas rápidas</strong>.
+    </p>
+    <div class="cta-row mt-32">
+      <a class="btn btn-primary" href="../catalogo/index.html">Ver catálogo</a>
+      <a class="btn btn-secondary" href="../pages/contacto.html">Contacto</a>
+    </div>
+  </section>
+
+  <!-- Valores -->
+  <section class="about-values container">
+    <h2 class="section-title">Nuestros valores</h2>
+    <ul class="grid values-grid">
+      <li class="card">
+        <div class="badge-ico">🚚</div>
+        <h3>Rapidez</h3>
+        <p>Envíos en 24–48 h dentro de CABA y coordinación ágil por WhatsApp.</p>
+      </li>
+      <li class="card">
+        <div class="badge-ico">🧼</div>
+        <h3>Calidad</h3>
+        <p>Productos propios y marcas confiables, pensados para rendir más.</p>
+      </li>
+      <li class="card">
+        <div class="badge-ico">🤝</div>
+        <h3>Confianza</h3>
+        <p>Asesoramiento honesto para elegir lo que realmente necesitás.</p>
+      </li>
+      <li class="card">
+        <div class="badge-ico">📦</div>
+        <h3>Soluciones</h3>
+        <p>Armar mensualmente tu pedido y olvidarte de quedarte sin stock.</p>
+      </li>
+    </ul>
+  </section>
+
+  <!-- Cómo trabajamos (con tus 3 fotos) -->
+  <section class="about-process container">
+    <h2 class="section-title">Cómo trabajamos</h2>
+    <div class="grid process-grid">
+      <article class="card process-card">
+        <figure class="process-media">
+          <img src="../assets/img/quienes/local.jpg" alt="Local de Barretodo en Almagro, CABA" loading="lazy">
+        </figure>
+        <h3>Te esperamos en el local</h3>
+        <p>Atención cercana y retiro en el momento. También tomamos pedidos por WhatsApp.</p>
+      </article>
+
+      <article class="card process-card">
+        <figure class="process-media">
+          <img src="../assets/img/quienes/produccion.jpg" alt="Preparación y armado de productos de limpieza Barretodo" loading="lazy">
+        </figure>
+        <h3>Preparamos tu pedido</h3>
+        <p>Seleccionamos y armamos productos propios y de marcas para que rindan al máximo.</p>
+      </article>
+
+      <article class="card process-card">
+        <figure class="process-media">
+          <img src="../assets/img/quienes/envio.jpg" alt="Reparto y entregas rápidas en CABA" loading="lazy">
+        </figure>
+        <h3>Entregamos a tiempo</h3>
+        <p>Coordinamos entregas en 24–48 h en CABA, o retiro cuando prefieras.</p>
+      </article>
+    </div>
+  </section>
+
+  <!-- Métricas de confianza (opcionales, editables) -->
+  <section class="about-stats container">
+    <ul class="grid stats-grid">
+      <li class="stat">
+        <span class="stat-num">24–48 h</span>
+        <span class="stat-label">Entregas en CABA</span>
+      </li>
+      <li class="stat">
+        <span class="stat-num">+300</span>
+        <span class="stat-label">Clientes activos</span>
+      </li>
+      <li class="stat">
+        <span class="stat-num">3 cuotas</span>
+        <span class="stat-label">Pagando con tarjeta</span>
+      </li>
+    </ul>
+  </section>
+
+  <!-- Cierre CTA -->
+  <section class="about-cta cta-band">
+    <div class="container cta-band-inner">
+      <h2>¿Querés simplificar tus compras de limpieza?</h2>
+      <div class="cta-row">
+        <a class="btn btn-primary" href="../catalogo/index.html">Ver catálogo</a>
+        <a class="btn btn-secondary" href="https://wa.me/541151022954?text=Hola%20Barretodo%2C%20quiero%20un%20presupuesto" target="_blank" rel="noopener">Escribinos por WhatsApp</a>
+      </div>
+    </div>
+  </section>
 
 </main>
+
+
+  
 <footer class="site-footer">
   <div class="container">
 
