--- a/web/pages/quienes-somos.html
+++ b/web/pages/quienes-somos.html
@@ -85,12 +85,12 @@
       <li class="card">
         <div class="badge-ico">🚚</div>
         <h3>Rapidez</h3>
-        <p>Envíos en 24–48 h dentro de CABA y coordinación ágil por WhatsApp.</p>
+        <p>Envíos en 48hs dentro de CABA y coordinación por WhatsApp.</p>
       </li>
       <li class="card">
         <div class="badge-ico">🧼</div>
         <h3>Calidad</h3>
-        <p>Productos propios y marcas confiables, pensados para rendir más.</p>
+        <p>Productos propios y confiables, pensados para rendir más.</p>
       </li>
       <li class="card">
         <div class="badge-ico">🤝</div>
