--- a/web/pages/quienes-somos.html
+++ b/web/pages/quienes-somos.html
@@ -111,7 +111,7 @@
     <div class="grid process-grid">
       <article class="card process-card">
         <figure class="process-media">
-          <img src="../assets/img/quienes/local.jpg" alt="Local de Barretodo en Almagro, CABA" loading="lazy">
+          <img src="../assets/img/local.jpg" alt="Local de Barretodo en Almagro, CABA" loading="lazy">
         </figure>
         <h3>Te esperamos en el local</h3>
         <p>Atención cercana y retiro en el momento. También tomamos pedidos por WhatsApp.</p>
@@ -119,7 +119,7 @@
 
       <article class="card process-card">
         <figure class="process-media">
-          <img src="../assets/img/quienes/produccion.jpg" alt="Preparación y armado de productos de limpieza Barretodo" loading="lazy">
+          <img src="../assets/img/produccion.jpg" alt="Preparación y armado de productos de limpieza Barretodo" loading="lazy">
         </figure>
         <h3>Preparamos tu pedido</h3>
         <p>Seleccionamos y armamos productos propios y de marcas para que rindan al máximo.</p>
@@ -127,7 +127,7 @@
 
       <article class="card process-card">
         <figure class="process-media">
-          <img src="../assets/img/quienes/envio.jpg" alt="Reparto y entregas rápidas en CABA" loading="lazy">
+          <img src="../assets/img/envio.jpg" alt="Reparto y entregas rápidas en CABA" loading="lazy">
         </figure>
         <h3>Entregamos a tiempo</h3>
         <p>Coordinamos entregas en 24–48 h en CABA, o retiro cuando prefieras.</p>
