--- a/web/pages/distribuidora-caba.html
+++ b/web/pages/distribuidora-caba.html
@@ -120,6 +120,39 @@
     </article>
   </div>
 
+
+  <!-- Cómo trabajamos (con tus 3 fotos) -->
+  <section class="about-process container">
+    <h2 class="section-title">Cómo trabajamos</h2>
+    <div class="grid process-grid">
+      <article class="card process-card">
+        <figure class="process-media">
+          <img src="../assets/img/local.jpg" alt="Local de Barretodo en Almagro, CABA" loading="lazy">
+        </figure>
+        <h3>Te esperamos en el local</h3>
+        <p>Atención cercana y retiro en el momento. También tomamos pedidos por WhatsApp.</p>
+      </article>
+
+      <article class="card process-card">
+        <figure class="process-media">
+          <img src="../assets/img/produccion.jpg" alt="Preparación y armado de productos de limpieza Barretodo" loading="lazy">
+        </figure>
+        <h3>Preparamos tu pedido</h3>
+        <p>Seleccionamos y armamos productos propios y de marcas para que rindan al máximo.</p>
+      </article>
+
+      <article class="card process-card">
+        <figure class="process-media">
+          <img src="../assets/img/envio.jpg" alt="Reparto y entregas rápidas en CABA" loading="lazy">
+        </figure>
+        <h3>Entregamos a tiempo</h3>
+        <p>Coordinamos entregas en 24–48 h en CABA, o retiro cuando prefieras.</p>
+      </article>
+    </div>
+  </section>
+
+
+  
   <!-- CTA -->
   <div class="cta-row mt-32">
     <a class="btn btn-primary" href="../catalogo/index.html">Ver catálogo</a>
