--- a/web/pages/faq.html
+++ b/web/pages/faq.html
@@ -98,10 +98,16 @@
       </article>
     </div>
 
-    <div class="cta-row mt-32">
-      <a class="btn btn-primary" href="../catalogo/index.html">Ver catálogo</a>
-      <a class="btn btn-secondary" href="../pages/contacto.html">Contacto</a>
+       <!-- Cierre CTA -->
+  <section class="about-cta cta-band">
+    <div class="container cta-band-inner">
+      <h2>¿Querés simplificar tus compras de limpieza?</h2>
+      <div class="cta-row">
+        <a class="btn btn-primary" href="../catalogo/index.html">Ver catálogo</a>
+        <a class="btn btn-secondary" href="https://wa.me/541151022954?text=Hola%20Barretodo%2C%20quiero%20un%20presupuesto" target="_blank" rel="noopener">Escribinos por WhatsApp</a>
+      </div>
     </div>
+  </section>
   </section>
 </main>
 
