--- a/web/pages/como-comprar.html
+++ b/web/pages/como-comprar.html
@@ -71,10 +71,20 @@
     <li>Te asesoramos para optimizar rendimiento y costo.</li>
     <li>Coordinamos entrega en 24–48 hs según zona.</li>
   </ol>
-  <div class="cta-row mt-32">
-    <a class="btn btn-primary" href="../catalogo/index.html">Abrir catálogo</a>
-    <a class="btn btn-secondary" href="../pages/contacto.html">Enviar consulta</a>
-  </div>
+ 
+
+   <!-- Cierre CTA -->
+  <section class="about-cta cta-band">
+    <div class="container cta-band-inner">
+      <h2>¿Querés simplificar tus compras de limpieza?</h2>
+      <div class="cta-row">
+        <a class="btn btn-primary" href="../catalogo/index.html">Ver catálogo</a>
+        <a class="btn btn-secondary" href="https://wa.me/541151022954?text=Hola%20Barretodo%2C%20quiero%20un%20presupuesto" target="_blank" rel="noopener">Escribinos por WhatsApp</a>
+      </div>
+    </div>
+  </section>
+
+  
 </section>
 
 </main>
