--- a/web/pages/productos.html
+++ b/web/pages/productos.html
@@ -73,10 +73,19 @@
     <article class="card"><img src="../assets/img/aromatizacion.jpg" alt="Aromatización" class="card-img" loading="lazy"><h3>Aromatización</h3><button class="btn btn-outline" data-modal="aromatizacion">Ver más</button></article>
     <article class="card"><img src="../assets/img/insecticidas.jpg" alt="Insecticidas" class="card-img" loading="lazy"><h3>Insecticidas</h3><button class="btn btn-outline" data-modal="insecticidas">Ver más</button></article>
   </div>
-  <div class="cta-row mt-32">
-    <a class="btn btn-primary" href="../catalogo/index.html">Ver catálogo</a>
-    <a class="btn btn-secondary" href="https://wa.me/541151022954" target="_blank" rel="noopener">WhatsApp</a>
-  </div>
+
+     <!-- Cierre CTA -->
+  <section class="about-cta cta-band">
+    <div class="container cta-band-inner">
+      <h2>¿Querés simplificar tus compras de limpieza?</h2>
+      <div class="cta-row">
+        <a class="btn btn-primary" href="../catalogo/index.html">Ver catálogo</a>
+        <a class="btn btn-secondary" href="https://wa.me/541151022954?text=Hola%20Barretodo%2C%20quiero%20un%20presupuesto" target="_blank" rel="noopener">Escribinos por WhatsApp</a>
+      </div>
+    </div>
+  </section>
+
+  
 </section>
 
 <div class='modal' id='modal-concentrados' aria-hidden='true' role='dialog' aria-labelledby='modal-title-concentrados'>
