--- a/web/index.html
+++ b/web/index.html
@@ -226,7 +226,7 @@
       <h2>¿Necesitás una cotización? Respondemos hoy</h2>
       <div class="cta-row">
         <a class="btn btn-primary" href="catalogo/index.html">Abrir catálogo</a>
-        <a class="btn btn-secondary" href="pages/contacto.html">Enviar consulta</a>
+        <a class="btn btn-secondary" href="pages/contacto.html">Escribinos por WhatsApp</a>
       </div>
     </div>
   </section>
