--- a/web/index.html
+++ b/web/index.html
@@ -151,6 +151,49 @@
     </div>
   </section>
 
+
+	<!-- Cómo trabajamos (con tus 3 fotos) -->
+  <section class="about-process container">
+    <h2 class="section-title">Cómo trabajamos</h2>
+    <div class="grid process-grid">
+      <article class="card process-card">
+        <figure class="process-media">
+          <img src="../assets/img/local.jpg" alt="Local de Barretodo en Almagro, CABA" loading="lazy">
+        </figure>
+        <h3>Te esperamos en el local</h3>
+        <p>Atención cercana y retiro en el momento. También tomamos pedidos por WhatsApp.</p>
+      </article>
+
+      <article class="card process-card">
+        <figure class="process-media">
+          <img src="../assets/img/produccion.jpg" alt="Preparación y armado de productos de limpieza Barretodo" loading="lazy">
+        </figure>
+        <h3>Preparamos tu pedido</h3>
+        <p>Seleccionamos y armamos productos propios y de marcas para que rindan al máximo.</p>
+      </article>
+
+      <article class="card process-card">
+        <figure class="process-media">
+          <img src="../assets/img/envio.jpg" alt="Reparto y entregas rápidas en CABA" loading="lazy">
+        </figure>
+        <h3>Entregamos a tiempo</h3>
+        <p>Coordinamos entregas en 24–48 h en CABA, o retiro cuando prefieras.</p>
+      </article>
+    </div>
+  </section>
+
+
+	
+	 <section class="cta-band">
+    <div class="container cta-band-inner">
+      <h2>¿Necesitás una cotización? Respondemos hoy</h2>
+      <div class="cta-row">
+        <a class="btn btn-primary" href="catalogo/index.html">Abrir catálogo</a>
+        <a class="btn btn-secondary" href="pages/contacto.html">Escribinos por WhatsApp</a>
+      </div>
+    </div>
+  </section>
+
 <section class="brands section-muted">
   <div class="container">
     <h2 class="section-title">Marcas con las que trabajamos</h2>
@@ -220,16 +263,6 @@
 </section>
 
 
-
-  <section class="cta-band">
-    <div class="container cta-band-inner">
-      <h2>¿Necesitás una cotización? Respondemos hoy</h2>
-      <div class="cta-row">
-        <a class="btn btn-primary" href="catalogo/index.html">Abrir catálogo</a>
-        <a class="btn btn-secondary" href="pages/contacto.html">Escribinos por WhatsApp</a>
-      </div>
-    </div>
-  </section>
 
   <!-- Modales de categorías -->
   <div class='modal' id='modal-concentrados' aria-hidden='true' role='dialog' aria-labelledby='modal-title-concentrados'>
