--- a/web/index.html
+++ b/web/index.html
@@ -272,7 +272,7 @@
       <button class='modal-close' data-close='concentrados' aria-label='Cerrar'>&times;</button>
       <h3 id='modal-title-concentrados'>Concentrados</h3>
       <p>Desengrasantes, detergentes industriales, desinfectantes, multiuso. Presentaciones 1L / 5L / 20L.</p>
-      <ul class='modal-list'><li>Desengrasante industrial</li><li>Detergente concentrado</li><li>Desinfectante</li><li>Multiuso</li></ul>
+      <div class='modal-list'><span>Desengrasante industrial</span><span>Detergente concentrado</span><span>Desinfectante</span><span>Multiuso</span></div>
       <div class='cta-row'>
         <a class='btn btn-primary' href='catalogo/index.html'>Ver catálogo</a>
         <a class='btn btn-secondary' href='https://wa.me/541151022954' target='_blank' rel='noopener'>WhatsApp</a>
@@ -286,7 +286,7 @@
       <button class='modal-close' data-close='descartables' aria-label='Cerrar'>&times;</button>
       <h3 id='modal-title-descartables'>Descartables</h3>
       <p>Bolsón papel higiénico 30 rollos (distintos metrajes), servilletas, bolsas, guantes.</p>
-      <ul class='modal-list'><li>Bolsón papel higiénico 30 rollos</li><li>Servilletas</li><li>Bolsas de residuos</li><li>Guantes</li></ul>
+      <div class='modal-list'><span>Bolsón papel higiénico 30 rollos</span><span>Servilletas</span><span>Bolsas de residuos</span><span>Guantes</span></div>
       <div class='cta-row'>
         <a class='btn btn-primary' href='catalogo/index.html'>Ver catálogo</a>
         <a class='btn btn-secondary' href='https://wa.me/541151022954' target='_blank' rel='noopener'>WhatsApp</a>
@@ -300,7 +300,7 @@
       <button class='modal-close' data-close='dispenser' aria-label='Cerrar'>&times;</button>
       <h3 id='modal-title-dispenser'>Dispenser</h3>
       <p>Equipos y recargas para jabón líquido, papel toalla, papel higiénico institucional, alcohol en gel.</p>
-      <ul class='modal-list'><li>Dispensers de jabón</li><li>Papel toalla</li><li>Papel higiénico institucional</li><li>Alcohol en gel</li></ul>
+      <div class='modal-list'><span>Dispensers de jabón</span><span>Papel toalla</span><span>Papel higiénico institucional</span><span>Alcohol en gel</span></div>
       <div class='cta-row'>
         <a class='btn btn-primary' href='catalogo/index.html'>Ver catálogo</a>
         <a class='btn btn-secondary' href='https://wa.me/541151022954' target='_blank' rel='noopener'>WhatsApp</a>
@@ -314,7 +314,7 @@
       <button class='modal-close' data-close='herramientas' aria-label='Cerrar'>&times;</button>
       <h3 id='modal-title-herramientas'>Herramientas</h3>
       <p>Palas, escobas, fibras, trapos, baldes, mopas, carritos (hogar y profesional).</p>
-      <ul class='modal-list'><li>Escobas y palas</li><li>Fibras y trapos</li><li>Baldes y mopas</li><li>Carritos</li></ul>
+      <div class='modal-list'><span>Escobas y palas</span><span>Fibras y trapos</span><span>Baldes y mopas</span><span>Carritos</span></div>
       <div class='cta-row'>
         <a class='btn btn-primary' href='catalogo/index.html'>Ver catálogo</a>
         <a class='btn btn-secondary' href='https://wa.me/541151022954' target='_blank' rel='noopener'>WhatsApp</a>
@@ -328,7 +328,7 @@
       <button class='modal-close' data-close='aromatizacion' aria-label='Cerrar'>&times;</button>
       <h3 id='modal-title-aromatizacion'>Aromatización</h3>
       <p>Difusores, fragancias concentradas y ambientales.</p>
-      <ul class='modal-list'><li>Difusores</li><li>Fragancias concentradas</li><li>Ambientales</li></ul>
+      <div class='modal-list'><span>Difusores</span><span>Fragancias concentradas</span><span>Ambientales</span></div>
       <div class='cta-row'>
         <a class='btn btn-primary' href='catalogo/index.html'>Ver catálogo</a>
         <a class='btn btn-secondary' href='https://wa.me/541151022954' target='_blank' rel='noopener'>WhatsApp</a>
@@ -342,7 +342,7 @@
       <button class='modal-close' data-close='insecticidas' aria-label='Cerrar'>&times;</button>
       <h3 id='modal-title-insecticidas'>Insecticidas</h3>
       <p>Aerosoles, líquidos y cebos de marcas líderes.</p>
-      <ul class='modal-list'><li>Aerosoles</li><li>Líquidos</li><li>Cebos</li></ul>
+      <div class='modal-list'><span>Aerosoles</span><span>Líquidos</span><span>Cebos</span></div>
       <div class='cta-row'>
         <a class='btn btn-primary' href='catalogo/index.html'>Ver catálogo</a>
         <a class='btn btn-secondary' href='https://wa.me/541151022954' target='_blank' rel='noopener'>WhatsApp</a>
