--- a/web/index.html
+++ b/web/index.html
@@ -66,13 +66,13 @@
 
 <main class="page">
   <section class="hero">
-    <img src="assets/img/hero.jpg" alt="Distribuidora de limpieza en CABA" class="hero-img" loading="eager">
+    <img src="assets/img/hero.jpg" alt="Distribuidora de productos de limpieza mayorista en CABA - Barretodo" class="hero-img" loading="eager">
     <div class="hero-content container">
-      <h1>Distribuidora de productos de limpieza en CABA</h1>
-      <p class="subtitle">Mayorista y minorista. Empresas, consorcios y hogares. Envíos 24–48 hs según zona. Asesoramiento para comprar lo que necesitás.</p>
+      <h1>Distribuidora mayorista de productos de limpieza en CABA</h1>
+      <p class="subtitle">Abastecemos empresas, consorcios y hogares. Entregas rápidas en 24–48 h y atención por WhatsApp.”</p>
       <div class="cta-row">
-        <a class="btn btn-primary" href="pages/productos.html">Ver productos</a>
-        <a class="btn btn-secondary" href="catalogo/index.html">Catálogo interactivo</a>
+        <a class="btn btn-primary" href="pages/productos.html">Ver catálogo de limpieza</a>
+        <a class="btn btn-secondary" href="catalogo/index.html">Solicitar presupuesto online</a>
       </div>
     </div>
     
