--- a/web/index.html
+++ b/web/index.html
@@ -71,9 +71,10 @@
       <h1>Distribuidora mayorista de productos de limpieza en CABA</h1>
       <p class="subtitle">Abastecemos empresas, consorcios y hogares. Entregas rápidas en 24–48 h y atención por WhatsApp.”</p>
       <div class="cta-row">
-        <a class="btn btn-primary" href="pages/productos.html">Ver catálogo de limpieza</a>
-        <a class="btn btn-secondary" href="catalogo/index.html">Solicitar presupuesto online</a>
-      </div>
+  <a class="btn btn-primary" href="pages/productos.html">CONOCÉ NUESTROS PRODUCTOS</a>
+  <a class="btn btn-secondary" href="catalogo/index.html">COTIZÁ PRESUPUESTO AHORA</a>
+</div>
+
     </div>
     
   </section>
