--- a/web/index.html
+++ b/web/index.html
@@ -72,7 +72,7 @@
       <p class="subtitle">Abastecemos empresas, consorcios y hogares. Entregas rápidas en 24–48 h y atención por WhatsApp.”</p>
       <div class="cta-row">
   <a class="btn btn-primary" href="pages/productos.html">CONOCÉ NUESTROS PRODUCTOS</a>
-  <a class="btn btn-secondary" href="catalogo/index.html">COTIZÁ PRESUPUESTO AHORA</a>
+  <a class="btn btn-secondary" href="catalogo/index.html">¡COTIZÁ PRESUPUESTO AHORA!</a>
 </div>
 
     </div>
@@ -190,7 +190,7 @@
     <div class="container cta-band-inner">
       <h2>¿Necesitás una cotización? Respondemos hoy</h2>
       <div class="cta-row">
-        <a class="btn btn-primary" href="catalogo/index.html">Abrir catálogo</a>
+        <a class="btn btn-primary" href="catalogo/index.html">¡COTIZÁ PRESUPUESTO AHORA!</a>
         <a class="btn btn-secondary" href="pages/contacto.html">Escribinos por WhatsApp</a>
       </div>
     </div>
