--- a/web/pages/quienes-somos.html
+++ b/web/pages/quienes-somos.html
@@ -73,7 +73,7 @@
       <strong>productos rendidores</strong>, <strong>asesoramiento honesto</strong> y <strong>entregas rápidas</strong>.
     </p>
     <div class="cta-row mt-32">
-      <a class="btn btn-primary" href="../catalogo/index.html">Ver catálogo</a>
+      <a class="btn btn-primary" href="../catalogo/index.html">¡COTIZÁ PRESUPUESTO AHORA!</a>
       <a class="btn btn-secondary" href="../pages/contacto.html">Contacto</a>
     </div>
   </section>
