--- a/web/index.html
+++ b/web/index.html
@@ -73,6 +73,7 @@
       <div class="cta-row">
   <a class="btn btn-primary" href="pages/productos.html">CONOCÉ NUESTROS PRODUCTOS</a>
   <a class="btn btn-secondary" href="catalogo/index.html">¡COTIZÁ PRESUPUESTO AHORA!</a>
+  <a class="btn btn-whatsapp" href="https://wa.me/541151022954?text=Hola%20Barretodo%2C%20quiero%20más%20información" target="_blank" rel="noopener">
 </div>
 
     </div>
